        fix-ster:  changes fertility/sterility of animals or dwarves
        view-item-info: adds information and customisable descriptions to item viewscreens
        item-descriptions:  holds a default description for every item type and subtype
        warn-starving:  check for starving, thirsty, or very drowsy units and pause with warning if any are found
    New tweaks
        kitchen-prefs-color: Changes color of enabled items to green in kitchen preferences
        kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
    Fixes
        Plugins with vmethod hooks can now be reloaded on OS X
        Lua's os.system() now works on OS X
        Fixed default arguments in Lua gametype detection functions
        gui/hack-wish now properly assigns quality to items.
        gui/gm-editor handles lua tables properly
        steam-engine: fixed a crash on arena load
        tweak fps-min fixed
        workflow: Fixed some issues with stuck jobs
            - Note: Existing stuck jobs must be cancelled and re-added
    Misc Improvements
        dwarfmonitor widgets' positions, formats, etc. are now customizable (see Readme)
        dwarfmonitor weather display now separated from the date display
        dwarfmonitor: New mouse cursor widget
        gui/gm-editor: Pointers can now be displaced
        gui/hack-wish: renamed to gui/create-item
        "keybinding list" accepts a context
        nyan: Can now be stopped with dfhack-run
        quicksave: Restricted to fortress mode
        search: Now supports the noble suggestion screen (e.g. suggesting a baron)
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module