@@ -16,6 +16,7 @@ DFHack Future
         item-descriptions:  holds a default description for every item type and subtype
         warn-starving:  check for starving, thirsty, or very drowsy units and pause with warning if any are found
     New tweaks
+        kitchen-keys: Fixes DF kitchen meal keybindings
         kitchen-prefs-color: Changes color of enabled items to green in kitchen preferences
         kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
     Fixes
